# gstreamer-dynamic-rtsp

./: .gitmodules  CMakeLists.txt  FindGStreamer.cmake  client.c  config.h  protocol.c  protocol.h  server.c
